force-app/main/default/objects/Credit__c/Credit__c.object-meta.xml
<CustomObject>
    <label>Credit</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>