force-app/main/default/objects/Credit__c/fields/Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Credit_Percentage__c</fullName>
    <label>Credit Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>