force-app/main/default/objects/Credit__c/fields/Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credits_Applied__c</fullName>
    <label>Credits Applied</label>
    <summarizedField>Applied_Credit__c.Applied_Amount__c</summarizedField>
    <summaryForeignKey>Applied_Credit__c.Credit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>