force-app/main/default/objects/Credit__c/fields/Credits_Available__c.field-meta.xml
<CustomField>
    <fullName>Credits_Available__c</fullName>
    <formula>if(NOT(ISBLANK(Credit_Amount__c)),
    Credit_Amount__c -  Credits_Applied__c,
    null
			)</formula>
    <label>Credits Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>