force-app/main/default/objects/Credit__c/fields/Financial_Aid_Form__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Aid Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Form__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Financial_Aid</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Credits</relationshipLabel>
    <relationshipName>Credits</relationshipName>
    <type>Lookup</type>
</CustomField>