force-app/main/default/objects/Credit__c/fields/Withdraw_Form__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdraw Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Form__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Withdrawal_Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Credits (Withdraw Form)</relationshipLabel>
    <relationshipName>Credits1</relationshipName>
    <type>Lookup</type>
</CustomField>